Wed Jun  2 10:44:38 1999  Anthony Green  <green@cygnus.com>

	* except.c (link_handler): Chain exception handlers in order.

Wed Jun  2 10:41:24 1999  Anthony Green  <green@cygnus.com>

	* expr.c (expand_byte_code): Fill unreachable bytecode regions
 	with nops and process as usual in order to always set correct EH
 	ranges.  Emit detailed warnings about unreachable bytecodes.

Wed Jun  2 10:35:13 1999  Anthony Green  <green@cygnus.com>

	* class.c (build_utf8_ref): Mark cinit and utf8 tree nodes as
 	constant.

Fri May 28 18:22:45 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>

        * parse.y (lookup_field_wrapper): Unified returned value to NULL
          or the searched field decl.
	
Fri May 28 11:34:05 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>

	* parse.y (fold_constant_for_init): Convert numerical constant
 	values to the type of the assigned field.

Thu May 27 19:57:40 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>

	* expr.c (lookup_field): Relaxed the test on class loading error
 	detection.
	* parse.y (fold_constant_for_init): Enabeled old code.

Wed May 26 18:06:02 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>

	* parse.y (valid_ref_assignconv_cast_p): Let `_Jv_CheckCast'
 	decide the validity of the cast of a java.lang.Cloneable reference
 	to an array.
	(patch_conditional_expr): Fixed first argument passed to
 	binary_numeric_promotion.

Wed May 26 15:33:06 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>

	* parse.y (qualify_ambiguous_name): Take into account that a
 	CONVERT_EXPR might specify a type as a WFL.

Tue May 25 15:06:13 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
        * parse.y (patch_assignment): Save the rhs before using it as an
        argument to _Jv_CheckArrayStore.
 
Tue May 25 11:23:59 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>

	* lex.c (java_parse_doc_section): Fixed `tag' buffer size.

Mon May 24 13:26:00 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>
